projects/vb6parse/snapshots/parsers/cst/function_declaration/function_statements/friend_function.snap
---
source: projects/vb6parse/tests/function_declaration/function_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: FunctionStatement
      children:
        - kind: FriendKeyword
          text: Friend
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: IntegerKeyword
          text: Integer
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children: []
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Newline
          text: "\n"
